# sensor-monitoring

./: Makefile  README.md  __main__.py  pyproject.toml  requirements.txt
config/: config.json
sensor_monitoring/: app.py
sensor_monitoring/alerting_channels/: __init__.py  alerting_channel.py  email_alerting_channel.py
sensor_monitoring/models/: __init__.py  alert.py  range.py
sensor_monitoring/sensors/: __init__.py  humidity_sensor.py  pressure_sensor.py
sensor_monitoring/services/: alert.py  main.py
sensor_monitoring/validators/: __init__.py  humidity_validator.py  pressure_validator.py  temperature_validator.py
src/sensor_monitoring/: app.py  types.py
src/sensor_monitoring/models/: range.py
src/sensor_monitoring/sensors/: __init__.py  sensor.py  temperature_sensor.py
src/sensor_monitoring/services/: __init__.py  alert.py  main.py
src/sensor_monitoring/validators/: __init__.py  temperature_validator.py  types.py  validator.py
test/: test_validation.py
